<resources>
    <string name="app_name">Where Is My Bike?</string>
    <string name="title_activity_bike_user">Bike User</string>
    <string name="title_activity_police">Police</string>
    <string name="title_activity_bike_user_main">My Bicycles</string>
    <string name="title_activity_police_main">Police 1</string>
    <string name="title_activity_new_bike">New Bike</string>
    <string name="title_activity_edit_bike">Edit Bike</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login and register-->
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_address">Address (Optional)</string>
    <string name="prompt_pnumber">Phone Number (Optional)</string>
    <string name="prompt_email_cfm">Confirm Email</string>
    <string name="prompt_pwd_cfm">Confirm Password</string>
    <string name="prompt_policeman_id">Policeman Id Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_police_id">Police Id Number</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_pwd">Forgot Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_id_number">This id number is too short</string>
    <string name="error_incorrect_email">This email is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_pId">This id number is incorrect</string>
    <string name="error_email_not_match">The email fields do not much</string>
    <string name="error_password_not_match">The password fields do not match</string>
    <string name="error_field_required">This field is required</string>

    <!-- Fragments -->
    <string name="title_fragment_bike_user_account">Manage Account</string>
    <string name="prompt_no_bikes">No bikes.</string>
    <string name="prompt_bike_vin">VIN No:</string>
    <string name="prompt_bike_brand">Brand:</string>
    <string name="prompt_bike_color">Color:</string>
    <string name="prompt_bike_lock">Lock:</string>
    <string name="prompt_bike_status">Status:</string>
    <string name="prompt_bike_access">Access To:</string>
    <string name="prompt_bike_latitude">Latitude:</string>
    <string name="prompt_bike_longitude">Longitude:</string>

    <string name="prompt_bike_vin_change">Bike VIN Number</string>
    <string name="prompt_bike_brand_change">Bike Brand</string>
    <string name="prompt_bike_color_change">Bike Color</string>
    <string name="prompt_bike_lock_change">Bike Lock</string>
    <string name="prompt_bike_status_change">Bike Status</string>
    <string name="prompt_bike_access_change">Bike Access</string>
    <string name="prompt_bike_latitude_change">Bike Latitude</string>
    <string name="prompt_bike_longitude_change">Bike Longitude</string>

    <string name="action_track_bike">Track</string>
    <string name="action_save_bike">Save</string>
    <string name="action_delete_bike">Delete Bike</string>
    <string name="action_lock_bike">Lock Bike</string>
    <string name="action_unlock_bike">Unlock Bike</string>
    <string name="action_change_name_bike">Change Bike Name</string>
    <string name="action_allow_bike">Allow Access</string>
    <string name="action_deny_bike">Deny Access</string>
    <string name="action_stolen_bike">Report Stolen</string>
    <string name="action_found_bike">Report Found</string>

    <string name="title_fragment_bike_user_settings">Settings</string>
    <string name="title_fragment_bike_user_logout">Log out</string>

    <string name="hello_bikes_fragment">Bikes Fragment</string>
    <string name="hello_account_fragment">Account Fragment</string>
    <string name="hello_settings_fragment">Settings Fragment</string>

    <!-- Facebook -->
    <string name="facebook_app_id">108219459582853</string>

    <!--Bikes-->
    <string name="action_bike_details_txt">Please fill in the details of your bike to proceed with the registration.</string>

    <!--NFC-->
    <string name="nfc_address">com.example.daniel.bikedevice</string>
    <string name="action_nfc_txt">Waiting for NFC Bike Device.</string>
    <string name="error_invalid_vin">VIN number needs to be greater than 5.</string>

    <!--Bike Status-->
    <string name="title_moving_bike">Your bike is on the move!</string>
    <string name="title_locked">Locked</string>
    <string name="title_unlocked">Unlocked</string>
    <string name="title_stolen">Stolen</string>
    <string name="title_safe">Safe</string>
    <string name="title_access_none">None</string>

</resources>
