<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bikes"
            android:icon="@drawable/ic_menu_bikes"
            android:title="@string/title_activity_bike_user_main"
            android:checked="true"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/title_fragment_bike_user_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/title_fragment_bike_user_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/title_fragment_bike_user_logout" />
    </group>
</menu>
