<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/bikeVin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textStyle="bold"
                android:hint="@string/prompt_bike_vin"/>

            <TextView
                android:id="@+id/bikeVinChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:hint="@string/prompt_bike_vin_change"/>

            <TextView
                android:id="@+id/bikeBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_below="@+id/bikeVin"
                android:hint="@string/prompt_bike_brand" />

            <TextView
                android:id="@+id/bikeBrandChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="85dp"
                android:layout_below="@+id/bikeVinChange"
                android:hint="@string/prompt_bike_brand_change"/>

            <TextView
                android:id="@+id/bikeColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_below="@+id/bikeBrand"
                android:hint="@string/prompt_bike_color"/>

            <TextView
                android:id="@+id/bikeColorChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="85dp"
                android:layout_below="@+id/bikeBrandChange"
                android:hint="@string/prompt_bike_color_change"/>

            <TextView
                android:id="@+id/bikeLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_below="@+id/bikeColor"
                android:hint="@string/prompt_bike_lock"/>

            <TextView
                android:id="@+id/bikeLockChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="85dp"
                android:layout_below="@+id/bikeColorChange"
                android:hint="@string/prompt_bike_lock_change"/>

            <TextView
                android:id="@+id/bikeAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_below="@+id/bikeLock"
                android:hint="@string/prompt_bike_access"/>

            <TextView
                android:id="@+id/bikeAccessChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="85dp"
                android:layout_below="@+id/bikeLockChange"
                android:hint="@string/prompt_bike_access_change"/>

            <TextView
                android:id="@+id/bikeStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_below="@+id/bikeAccess"
                android:hint="@string/prompt_bike_status"/>

            <TextView
                android:id="@+id/bikeStatusChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="85dp"
                android:layout_below="@+id/bikeAccessChange"
                android:hint="@string/prompt_bike_status_change"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_primary"
                android:layout_alignParentBottom="true">
                <Button
                    android:id="@+id/track_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/action_track_bike"
                    android:textStyle="bold"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white" />
            </FrameLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
