<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.aau.wimb.whereismybike.BikeOwner.UserNewBikeActivity">

    <ScrollView
        android:id="@+id/normal_bike_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/register_bike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/bikeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/action_bike_details_txt"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bikeVin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/bikeDetails"
                android:hint="@string/prompt_bike_vin"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_vin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_bike_vin_change"
                android:layout_below="@+id/bikeVin"
                android:textSize="15sp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/bikeBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_vin"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_bike_brand"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/edit_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bikeBrand"/>

            <TextView
                android:id="@+id/bikeColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_brand"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_bike_color"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/edit_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bikeColor"/>

            <FrameLayout
                android:id="@+id/save_button_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_color"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_primary">

                <Button
                    android:id="@+id/save_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/action_save_bike"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/nfc_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="50dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/bikeNfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_nfc_txt"
        android:textSize="17sp" />

</LinearLayout>
