<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_moving_bike"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/dialog_text"
        android:orientation="horizontal"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/dialog_track_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/action_track_bike"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@android:color/white"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_accent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/dialog_report_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/action_stolen_bike"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@android:color/white"/>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
